--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
         <h4>languages i've learned:</h4>
 
-        <p class="two">HTML/CSS, javascript, Jquery,</p>
+        <p class="two">HTML/CSS, javascript, Jquery</p>
 
         <h5>Tools:</h5>
 
