--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <a href="Resume Front end.pdf">Resume</a>
 
             <div class="linked">
-                <a href="mailto:gregorymontague@gmail.com">
+                <a href="https://www.linkedin.com/feed/?trk=opento_lp">
                     <img src="linked.png" alt="linkedin">
                 </a>
             </div>
