--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div id="about">
         <p class="about2">Hello! I’m Gregory Montague, An aspiring front end developer. I learned development through
             Clark college,
-            Various books, online tutorials, and attending networking groups. In my journey i have worked on a few
+            Various books, online tutorials, and attending networking groups. In my journey I have worked on a few
             projects while in school and am currently looking to start my career.</p>
     </div>
 
@@ -104,9 +104,9 @@
 
     <div class="infobox2">
         <h6>DESIGNER</h6>
-        <p class="summary">Simplicity and clean designs is what i aim for in all my projects. I've always valued the art
-            in front end development.</p>
-        <p class="heading">What i design:</p>
+        <p class="summary">Simplicity and clean designs is what I aim for in all my projects. I've always valued the art
+            of front end development.</p>
+        <p class="heading">What I design:</p>
         <p class="list">UX,UI,Mobile,web,Logos</p>
         <p class="othertools">Tools:</p>
 
