--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <a href="#greet" class="active">Home</a>
             <a href="#outline">About</a>
             <a href="mailto:gregorymontague@gmail.com">Contact</a>
-            <a href="Resume Front end.pdf">Resume</a>
+            <a href="Resume.pdf">Resume</a>
 
             <div class="linked">
                 <a href="mailto:gregorymontague@gmail.com">
