--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 
     <div id="about">
-        <p class="about2">Hello! I’m Gregory Montague, An aspiring front end developer. I learned development through
+        <p class="about2">Hello! I’m Gregory Montague, An aspiring front end developer. I learned Development through
             Clark college,
             Various books, online tutorials, and attending networking groups. In my journey i have worked on a few
             projects while in school and am currently looking to start my career.</p>
@@ -105,9 +105,9 @@
     <div class="infobox2">
         <h6>DESIGNER</h6>
         <p class="summary">Simplicity and clean designs is what i aim for in all my projects. I've always valued the art
-            in front end development.</p>
+            in Front-End-Development.</p>
         <p class="heading">What i design:</p>
-        <p class="list">UX,UI,Mobile,web,Logos</p>
+        <p class="list">UX,UI,Mobile,Web,Logos</p>
         <p class="othertools">Tools:</p>
 
         <ul>
