--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <P id="greet" class="greeting">Welcome to Greg's Protfolio!</P>
 
-    <div id="intro">Designer and front end Developer, Based in Vancouver, Wa.</div>
+    <div id="intro">Designer and Front-End-Developer, Based in Vancouver, Wa.</div>
 
     <div class="greg">
         <img src="greg.jpg">
