--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         </div>
 
         <div class="weather-app">
-            <a href="weatherApplication\Weather.html">Weather
+            <a href="Weather.html">Weather
                 Application</a>
         </div>
         <div class="text-weather">
