--- a/Weather.html
+++ b/Weather.html
@@ -13,7 +13,7 @@
     <div class="weather-box">
     <div class="location">
         <h1 class="location-city">Timezone</h1>
-        <img src="icons\04d.png" alt="image">
+        <img src="04d.png" alt="image">
     </div>
     <div class="temperature">
         <div class="degree-section">
