--- a/index.html
+++ b/index.html
@@ -92,85 +92,12 @@
 
     <p class="projects" id="projects">Things i've worked on.</p>
 
-    <div class="portfolio-work">
-
-        <div class="img">
-            <a href="https://www.pearsonfieldeducation.org/">Pearson Education center</a>
+   <div class="hire1">
+            <a href="mailto:gregorymontague@gmail.com" class="button1">Hire me</a>
         </div>
-
-        <div class="summary-pearson"></div>
-        <div class="text-pearson">
-            I was on Pearson Airfield Education Center’s Design team and responsible for all the digital content.
-            Pearson’s
-            website already had a pre-existing Wordpress based site, I helped Redesign the site within their constraints
-            and
-            user specific goals. Pearson’s goal was to fundraise as much money as possible, the website lacked user
-            experience qualities, i addressed those in the new design.
-        </div>
-        <div class="pearson-image">
-            <img src="Pearson.jpg" alt="Education">
-        </div>
-
-        <div class="pearson-image1">
-            <img src="Pearson1.jpg" alt="Education">
-        </div>
-
-
-
-        <div class="Auto-detail">
-            <a href="https://www.figma.com/proto/7fjgR5QTMXSTYcoSXqT2kM/Final-Wireframe?node-id=1%3A2">Image Automotive
-                Detailing</a>
-        </div>
-        <div class="summary-detail"></div>
-        <div class="text-detail">
-            Image Automotive is a small Detailing business based in Vancouver, Wa. I created a presumptive design for
-            the
-            website based on the UX Research data I gathered.
-        </div>
-        <div class="pearson-image">
-            <img src="Imageauto.jpg" alt="Education">
-        </div>
-        <div class="pearson-image1">
-            <img src="Imageauto1.jpg" alt="Education">
-        </div>
-
-
-        <div class="timetoss">
-            <a href="https://www.figma.com/proto/gz0TEHOe890nUKFY20WkNv/TIMETOSSRR?node-id=0%3A3">Timetosser</a>
-        </div>
-        <div class="summary-time">
-            <p>
-                Timetosser is a Music instrument that was developed for DJ’s. I was in charge of the presumptive website
-                Design. Timetosser struggled to gain traction with their product, the marketing strategies that they
-                used
-                were unsuccessful. The goal of the project was to create a theoretical marketing plan using digital
-                methods
-                with supporting research.
-            </p>
-        </div>
-
-        <div class="pearson-image">
-            <img src="Timetosser.jpg" alt="Education">
-        </div>
-        <div class="pearson-image1">
-            <img src="Timetosser1.jpg" alt="Education">
-        </div>
-
-        <div class="weather-app">
-            <a href="Weather.html">Weather
-                Application</a>
-        </div>
-        <div class="text-weather">
-            <p>
-                This Weather Application project showcases my ability to work with javascript and pull data from API's.
-            </p>
-        </div>
-
-        <div class="weather-image">
-            <img src="weather-app.jpg" alt="Education">
-        </div>
-
     </div>
+
+   
 
 
 
